css/index.css
/* This line is importing the font 'Roboto'. DO NOT change line 2*/
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 400;
  src: local('Roboto Italic'), local('Roboto-Italic'), url(https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1Mu51xIIzc.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: local('Roboto Bold'), local('Roboto-Bold'), url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
}
/* Below this line is where you will start your work */
/* It is important to note, you will not be writing any CSS in this file*/
.header {
  width: 100%;
  height: 75px;
  background-color: #388E3C;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  z-index: 2;
}
.header h1 {
  margin: 0;
  font-size: 48px;
}
.articles {
  margin-top: 95px;
}
.article {
  margin: 20px 10%;
  padding: 0 20px 25px;
  border: 1px solid lightgrey;
  border-radius: 10px;
  background-color: white;
  position: relative;
  height: 50px;
  overflow: hidden;
  box-shadow: 2px 2px 2px lightgrey;
}
.article h2 {
  font-size: 28px;
  padding: 0;
  margin: 15px 0 0;
}
.article .date {
  margin: 0;
  font-size: 14px;
}
.article .close {
  position: absolute;
  top: 10px;
  right: 10px;
}
.article .expandButton {
  position: absolute;
  bottom: 0;
  left: 50%;
  font-size: 12px;
  color: grey;
  cursor: pointer;
  transform: translate(-50%);
  background-color: white;
}
.article-open {
  height: 400px;
}
.menu-button {
  position: absolute;
  left: 20px;
  cursor: pointer;
}
.menu {
  display: none;
  position: fixed;
  top: 75px;
  left: 0;
  width: 350px;
  height: 100vh;
  /* This give the height 100% of the screen or, '100% of View Height' */
  background-color: #81C784;
  border: 1px solid #004D40;
  border-left: none;
  border-bottom: none;
  z-index: 2;
  /* This set the layer level of the element, it has precendence over initial level of 1*/
}
.menu ul li {
  list-style-type: none;
  font-size: 32px;
  padding: 30px 0;
  text-align: center;
}
.menu--open {
  display: block;
}
html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto';
  background-color: #fffef7;
}

